moved the unreg of the access keys from the destructor to the Destroy method r=dcone, b=41246